test/expected/explain_0f_v-02.out
explain virtual void f() = 1
                           ^
28: error: '0' expected
